@startuml module-dependency
!theme plain
' 代码模块及其依赖图: 按整洁架构分层, 依赖只指向内层
' (app → adapters → application → domain)
' 渲染: 可用 VS Code PlantUML 插件, 或上传 kroki.io / plantuml.com 在线渲染

title SuperLottoNumberGenerator 模块依赖图（整洁架构分层）

skinparam componentStyle rectangle
skinparam packageStyle rectangle
skinparam linetype ortho
skinparam defaultTextAlignment center
skinparam shadowing false
skinparam dpi 150

legend top right
  ==图例==
  <size:10><i>虚线箭头 = 依赖 / 实现 / 调用方向</i></size>
  <size:10><i>依赖只指向内层: app → adapters → application → domain</i></size>
  <size:10><i>存储/用例间数据载体: LottoTicket (值类型)</i></size>
  <size:10><i>展示侧数据载体: LottoViewState (视图只感知它)</i></size>
endlegend

package "领域层 src/domain/ — lotto_core" as domain #FEF2E0 {
  component [LottoGroup\n«值类型: 单组号码»] as LottoGroup
  component [LottoTicket\n«实体: 5 组+时间+锁»] as LottoTicket
  component [LottoEngine\n«领域服务: 随机生成»] as LottoEngine

  LottoTicket ..> LottoGroup : 包含 5 组
  LottoEngine ..> LottoGroup : generate()
}

package "用例层 src/application/ — lotto_application" as application #F2E8F8 {
  component [LottoInteractor\n«用例交互器: 唯一状态源, 实现输入边界»] as Interactor
  interface "LottoInputBoundary\n«输入边界: Controller 依赖»" as InputBoundary
  interface "LottoPresenterPort\n«输出边界: Presenter 实现»" as PresenterPort
  interface "TicketRepository\n«持久化端口: QSettingsRepo 实现»" as TicketRepository

  Interactor ..|> InputBoundary : implements
  Interactor ..> PresenterPort : 状态变化后 present(ticket)
  Interactor ..> TicketRepository : 依赖抽象, 不触碰具体仓储
  Interactor ..> LottoEngine : 调用领域服务 generateBatch()
  Interactor --> LottoTicket : 持有 m_ticket (唯一状态源)
}

package "接口适配器层 src/adapters/ — lotto_adapters" as adapters #E0F0E0 {
  component [QSettingsTicketRepository\n«存储侧: QSettings INI 实现»] as QSettingsRepo
  component [LottoController\n«输入侧: 事件→用例翻译»] as Controller
  component [LottoPresenter\n«输出侧: 用例状态→展示状态»] as Presenter

  QSettingsRepo ..|> TicketRepository : implements
  QSettingsRepo ..> LottoTicket : 展平/还原 号码与时间
  Controller ..> InputBoundary : 翻译按钮点击为边界调用
  Presenter ..|> PresenterPort : implements
  Presenter ..> LottoTicket : buildViewState(ticket) 推导
}

package "视图层 src/app/ — lotto_app" as app #E0E8F8 {
  component [MainWindow\n«谦卑视图: 纯渲染»] as MainWindow
  component [style.qss\n«Qt 资源 :/style.qss»] as Style

  MainWindow --> Controller : 按钮 clicked 转发动作
  MainWindow ..> Presenter : 消费 viewStateChanged(LottoViewState)
  MainWindow ..> Style : 加载 QSS
}

package "组合根 src/app/main.cpp\n— SuperLottoNumberGenerator 可执行目标" as exe #F8E8E8 {
  component [main()\n«装配具体依赖»] as Main
  component [QSettings\n(SuperLottoNumberGenerator.ini)] as QSettings

  Main ..> QSettingsRepo : new(具体类) 唯一接触点
  Main ..> Interactor : new(&repository, &engine, &presenter)
  Main ..> Presenter : new 实现输出端口
  Main ..> Controller : new(&interactor) 依赖输入边界
  Main ..> QSettings : new(路径, IniFormat)
}

package "测试 tests/" as tests #F0F0F0 {
  component [LottoEngineTest] as T1
  component [LottoInteractorTest\n(注入内存 Fake 仓储, 无 GUI 依赖)] as T2
  component [QSettingsRepositoryTest\n(QTemporaryDir 隔离)] as T3
  component [LottoControllerTest\n(事件→用例翻译, 无 GUI 依赖)] as T6
  component [LottoPresenterTest\n(展示推导 + 订阅桥接, 无 GUI 依赖)] as T4
  component [MainWindowTest\n(offscreen 集成)] as T5

  T1 ..> LottoEngine
  T2 ..> Interactor
  T2 ..> TicketRepository : 构造注入 Fake
  T3 ..> QSettingsRepo
  T6 ..> Controller
  T4 ..> Presenter
  T5 ..> MainWindow
}

' ── 层间依赖: 编译目标链接关系 ──
application ..> domain : lotto_application → lotto_core (PUBLIC)
adapters ..> application : lotto_adapters → lotto_application (PUBLIC)
app ..> adapters : lotto_app → lotto_adapters (PUBLIC)
app ..> domain : lotto_app → lotto_core (PUBLIC)
exe ..> app : exe → lotto_app
exe ..> adapters : exe → lotto_adapters
exe ..> application : exe → lotto_application
exe ..> domain : exe → lotto_core
tests ..> domain : 测试 → lotto_core

@enduml
